--- a/style.css
+++ b/style.css
@@ -1,16 +1,67 @@
 *{
-    font-family: "Outfit";
-    background-color: #F1FAEE;
-    color: #1D3557;
-    margin: 0px;
-    text-align: center;
-  }
-  
-  main h1{
-    margin: 20px;
-  }
-  
-  .name_container{
-    display: "flex";
-    justify-content: center;
-  }
+  font-family: "Outfit";
+  background-color: #F1FAEE;
+  color: #1D3557;
+  margin: 0px;
+  text-align: center;
+  box-sizing: border-box;
+}
+main h1{
+  margin: 20px;
+}
+.name_container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.2rem;
+}
+.name_container input{
+  margin: 15px 0px 5px;
+  padding: 5px;
+  border: solid #1D3557 2px;
+  border-radius: 10px;
+  width: 220px;
+  font-size: 1.2rem;
+}
+.name_container button{
+  padding: 5px;
+  border: solid #1D3557 2px;
+  border-radius: 10px;
+  background-color: #1D3557;
+  color: #F1FAEE;
+  width: 220px;
+  cursor: pointer;
+  font-size: 1.2rem;
+/*   margin: 5px; */
+}
+.name_container button:hover{
+  background-color: #10223b;
+}
+
+.encouragement, .rps-btns{
+  margin: 10px;
+  font-weight: 400;
+  font-size: 1.2rem;
+}
+
+.main_game{
+  display: none;
+}
+
+.user_weapon{
+  padding: 5px 30px;
+  border: solid #1D3557 2px;
+  border-radius: 10px;
+  background-color: #F1FAEE;
+  color: #1D3557;
+  width: max-content;
+  cursor: pointer;
+  font-size: 1.2rem;
+}
+
+.user_weapon:hover{
+  background-color: #1D3557;
+  color: #F1FAEE;
+  cursor: pointer;
+}
