--- a/style.css
+++ b/style.css
@@ -33,14 +33,22 @@ main h1{
   width: 220px;
   cursor: pointer;
   font-size: 1.2rem;
-/*   margin: 5px; */
 }
 .name_container button:hover{
   background-color: #10223b;
 }
 
-.encouragement, .rps-btns{
+.encouragement{
   margin: 10px;
+  font-weight: 400;
+  font-size: 1.2rem;
+}
+
+.rps-btns{
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-weight: 400;
   font-size: 1.2rem;
 }
@@ -50,6 +58,7 @@ main h1{
 }
 
 .user_weapon{
+  margin: 0px 7px;
   padding: 5px 30px;
   border: solid #1D3557 2px;
   border-radius: 10px;
@@ -64,4 +73,15 @@ main h1{
   background-color: #1D3557;
   color: #F1FAEE;
   cursor: pointer;
+}
+
+.game_outcome{
+  display: flex;
+  flex-direction: column;
+}
+
+.outcome{
+  display:flex;
+  justify-content: center;
+  text-align: center;
 }
